force-app/main/default/objects/Property__c/Property__c.object-meta.xml
<CustomObject>
    <description>A Property record represents a Property card in a Forceopoly game.</description>
    <label>Property</label>
    <nameField>
        <label>Property Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>