force-app/main/default/objects/Property__c/fields/MortgageValue__c.field-meta.xml
<CustomField>
    <fullName>MortgageValue__c</fullName>
    <label>Mortgage Value</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>