force-app/main/default/objects/Property__c/recordTypes/FreeParking.recordType-meta.xml
<RecordType>
    <fullName>FreeParking</fullName>
    <active>true</active>
    <label>Free Parking</label>
</RecordType>