force-app/main/default/objects/Property__c/recordTypes/Go.recordType-meta.xml
<RecordType>
    <fullName>Go</fullName>
    <active>true</active>
    <label>Go</label>
</RecordType>