force-app/main/default/objects/Property__c/recordTypes/GoToJail.recordType-meta.xml
<RecordType>
    <fullName>GoToJail</fullName>
    <active>true</active>
    <label>Go To Jail</label>
</RecordType>