force-app/main/default/objects/Property__c/recordTypes/InJailJustVisiting.recordType-meta.xml
<RecordType>
    <fullName>InJailJustVisiting</fullName>
    <active>true</active>
    <label>In Jail / Just Visiting</label>
</RecordType>