force-app/main/default/objects/Property__c/recordTypes/Jail.recordType-meta.xml
<RecordType>
    <fullName>Jail</fullName>
    <active>true</active>
    <label>Jail</label>
</RecordType>