force-app/main/default/objects/Property__c/recordTypes/Railroad.recordType-meta.xml
<RecordType>
    <fullName>Railroad</fullName>
    <active>true</active>
    <label>Railroad</label>
</RecordType>